fix problem with mockito version